--- a/hobby.html
+++ b/hobby.html
@@ -18,6 +18,7 @@
                 <li>Listening Music🎧</li>
             </ul>
         <hr>
+        <a href="index.html">Home</a> | <a href="contact.html">Countact</a>
     </div>
 </body>
 </html>
