--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </table>
         <hr>
         <h1>OBJECTIVE</h1>
-        <P>To obtain a challenging and rewrding position that utilizes my skills and experience to contribution to the company's and success.</P>
+        <P>To work in a company were I can apply my knowledge and skills that is related to my specialization that can help the  company's success.</P>
         <hr>
         <h1>EDUCATION</h1>
         <table class="table table-striped">
