--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h1>COUNTACT</h1>
+        <a href="index.html">Home</a>
         <hr>
         <form>
             <div class="form-floating mb-3">
